test/testdata/bool/invalid_binary_op_error.lox
true - false; // error: - operator cannot be used with types bool and bool
